--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,6 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kumuluzeeee.version>3.0.0</kumuluzeeee.version>
+        <kumuluzee.version>3.0.0</kumuluzee.version>
     </properties>
 </project>
