--- a/services/pom.xml
+++ b/services/pom.xml
@@ -11,24 +11,6 @@
 
     <artifactId>services</artifactId>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>com.kumuluz.ee</groupId>
-                <artifactId>kumuluzee-maven-plugin</artifactId>
-                <version>${kumuluzee.version}</version>
-                <executions>
-                    <execution>
-                        <id>package</id>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
@@ -36,19 +18,14 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.1.1</version>
-        </dependency>
-        <dependency>
             <groupId>com.kumuluz.ee</groupId>
-            <artifactId>kumuluzee-core</artifactId>
+            <artifactId>kumuluzee-jax-rs-jersey</artifactId>
             <version>3.0.0</version>
         </dependency>
         <dependency>
-            <groupId>com.kumuluz.ee</groupId>
-            <artifactId>kumuluzee-servlet-jetty</artifactId>
-            <version>3.0.0</version>
+            <groupId>com.kumuluz.ee.rest</groupId>
+            <artifactId>kumuluzee-rest-core</artifactId>
+            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.config</groupId>
@@ -60,12 +37,6 @@
             <artifactId>kumuluzee-discovery-etcd</artifactId>
             <version>1.1.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.kumuluz.ee.rest</groupId>
-            <artifactId>kumuluzee-rest-core</artifactId>
-            <version>1.2.3</version>
-        </dependency>
     </dependencies>
-
 
 </project>
