--- a/api/src/main/resources/config.yml
+++ b/api/src/main/resources/config.yml
@@ -9,12 +9,12 @@ kumuluzee:
       port: 8082
   config:
     etcd:
-      hosts: http://localhost:2379
+      hosts: http://192.168.1.135:2379
   discovery:
     etcd:
-      hosts: http://localhost:2379
-    ttl: 120
-    ping-interval: 100
+      hosts: http://192.168.1.135:2379
+    ttl: 60
+    ping-interval: 60
 app-properties:
   external-services:
     enabled: false
