--- a/api/src/main/resources/config.yml
+++ b/api/src/main/resources/config.yml
@@ -9,13 +9,15 @@ kumuluzee:
       port: 8082
   config:
     etcd:
-      hosts: http://192.168.1.135:2379
+      hosts: http://etcd:2379
   discovery:
     etcd:
-      hosts: http://192.168.1.135:2379
+      hosts: http://etcd:2379
     ttl: 60
     ping-interval: 60
 app-properties:
   external-services:
     enabled: false
     baseUrl: http://localhost:8082
+    nameOne: gs8150
+    nameTwo: as4813
