--- a/api/pom.xml
+++ b/api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
+    <artifactId>orders-api</artifactId>
 
 
     <build>
@@ -17,7 +17,7 @@
             <plugin>
                 <groupId>com.kumuluz.ee</groupId>
                 <artifactId>kumuluzee-maven-plugin</artifactId>
-                <version>${kumuluzee.version}</version>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>package</id>
@@ -32,33 +32,27 @@
     <dependencies>
         <dependency>
             <groupId>si.fri.rso.projekt</groupId>
-            <artifactId>services</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>orders-services</artifactId>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-core</artifactId>
-            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-servlet-jetty</artifactId>
-            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-jax-rs-jersey</artifactId>
-            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.rest</groupId>
             <artifactId>kumuluzee-rest-core</artifactId>
-            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.discovery</groupId>
             <artifactId>kumuluzee-discovery-etcd</artifactId>
-            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
