--- a/services/pom.xml
+++ b/services/pom.xml
@@ -9,33 +9,32 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>services</artifactId>
+    <artifactId>orders-services</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-cdi-weld</artifactId>
-            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee</groupId>
             <artifactId>kumuluzee-jax-rs-jersey</artifactId>
-            <version>3.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.rest</groupId>
             <artifactId>kumuluzee-rest-core</artifactId>
-            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.config</groupId>
             <artifactId>kumuluzee-config-etcd</artifactId>
-            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.kumuluz.ee.discovery</groupId>
             <artifactId>kumuluzee-discovery-etcd</artifactId>
-            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>si.fri.rso.projekt</groupId>
+            <artifactId>orders-models</artifactId>
         </dependency>
     </dependencies>
 
