--- a/api/src/main/resources/config.yml
+++ b/api/src/main/resources/config.yml
@@ -2,7 +2,7 @@ kumuluzee:
   name: rso-order
   env:
     name: dev
-  version: 1.0.
+  version: 1.0.0
   server:
     base-url: http://localhost:8082
     http:
@@ -13,8 +13,6 @@ kumuluzee:
   discovery:
     etcd:
       hosts: http://etcd:2379
-    ttl: 60
-    ping-interval: 60
 app-properties:
   external-services:
     enabled: false
