Fixed etcd discovery + added simple microservice call to buyers

--- a/services/pom.xml
+++ b/services/pom.xml
@@ -36,6 +36,10 @@
             <groupId>si.fri.rso.projekt</groupId>
             <artifactId>orders-models</artifactId>
         </dependency>
+        <dependency>
+            <groupId>si.fri.rso.projekt</groupId>
+            <artifactId>buyers-models</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
