--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
+            <dependency>
+                <groupId>si.fri.rso.projekt</groupId>
+                <artifactId>buyers-models</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
