--- a/api/src/main/resources/config.yml
+++ b/api/src/main/resources/config.yml
@@ -13,6 +13,28 @@ kumuluzee:
   discovery:
     etcd:
       hosts: http://etcd:2379
+  logs:
+    config-file: '<?xml version="1.0" encoding="UTF-8"?>
+                    <Configuration name="order">
+                        <Appenders>
+                            <Console name="console" target="SYSTEM_OUT">
+                                <PatternLayout pattern="%d %p %marker %m %X %ex %n"/>
+                            </Console>
+                            <Socket name="logstash" host="7f0fa5b3-663d-463a-ad91-c78ebd5549fa-ls.logit.io" port="13032" protocol="tcp">
+                                <JSONLayout complete="false" compact="true" eventEol="true" charset="UTF-8" properties="true"/>
+                            </Socket>
+                        </Appenders>
+                        <Loggers>
+                            <!-- Default logger -->
+                            <Root level="all">
+                                <AppenderRef ref="console" level="info"/>
+                                <AppenderRef ref="logstash" level="trace"/>
+                            </Root>
+                            <AsyncLogger name="si.fri.rso.projekt.order.api.v1.resources.OrderApi" level="trace" additivity="false" includeLocation="true">
+                              <AppenderRef ref="logstash"/>
+                            </AsyncLogger>
+                        </Loggers>
+                    </Configuration>'
 app-properties:
   external-services:
     enabled: false
