--- a/api/src/main/resources/config.yml
+++ b/api/src/main/resources/config.yml
@@ -14,6 +14,18 @@ kumuluzee:
     etcd:
       hosts: http://etcd:2379
   logs:
+  health:
+    servlet:
+      mapping: /health
+      enabled: true
+    logs:
+      enabled: true
+      level: INFO
+      period-s: 30
+    checks:
+      disk-space-health-check:
+        threshold: 100000000
+
     config-file: '<?xml version="1.0" encoding="UTF-8"?>
                     <Configuration name="order">
                         <Appenders>
@@ -38,3 +50,5 @@ kumuluzee:
 app-properties:
   external-services:
     enabled: false
+rest-properties:
+  healthy: true;
