--- a/api/src/main/resources/config.yml
+++ b/api/src/main/resources/config.yml
@@ -25,7 +25,12 @@ kumuluzee:
     checks:
       disk-space-health-check:
         threshold: 100000000
-
+    metrics:
+      web-instrumentation:
+      - name: metricsEndpoint
+        url-pattern: /metrics/*
+      - name: order-endpoint
+        url-pattern: /v1/orders/*
     config-file: '<?xml version="1.0" encoding="UTF-8"?>
                     <Configuration name="order">
                         <Appenders>
