--- a/api/pom.xml
+++ b/api/pom.xml
@@ -30,10 +30,10 @@
         </plugins>
     </build>
     <dependencies>
-        <dependency>
+        <!--><dependency>
             <groupId>com.kumuluz.ee.metrics</groupId>
             <artifactId>kumuluzee-metrics-core</artifactId>
-        </dependency>
+        </dependency><-->
         <dependency>
             <groupId>com.kumuluz.ee.health</groupId>
             <artifactId>kumuluzee-health</artifactId>
