--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
                 <artifactId>kumuluzee-fault-tolerance-hystrix</artifactId>
                 <version>1.0.0-SNAPSHOT</version>
             </dependency>
-            <dependency>
+            <!--><dependency>
                 <groupId>com.kumuluz.ee.metrics</groupId>
                 <artifactId>kumuluzee-metrics-core</artifactId>
                 <version>1.1.1</version>
-            </dependency>
+            </dependency><-->
             <dependency>
                 <groupId>com.kumuluz.ee.health</groupId>
                 <artifactId>kumuluzee-health</artifactId>
