--- a/api/src/main/resources/config.yml
+++ b/api/src/main/resources/config.yml
@@ -17,31 +17,14 @@ kumuluzee:
     servlet:
       mapping: /health
       enabled: true
+    logs:
+      enabled: true
+      level: INFO
+      period-s: 30
     checks:
       disk-space-health-check:
         threshold: 100000000
-  logs:
-    config-file: '<?xml version="1.0" encoding="UTF-8"?>
-                      <Configuration name="order">
-                          <Appenders>
-                              <Console name="console" target="SYSTEM_OUT">
-                                  <PatternLayout pattern="%d %p %marker %m %X %ex %n"/>
-                              </Console>
-                              <Socket name="logstash" host="c322641a-8fb8-4799-9040-d4be6a8cc675-ls.logit.io" port="13437" protocol="tcp">
-                                  <JSONLayout complete="false" compact="true" eventEol="true" charset="UTF-8" properties="true"/>
-                              </Socket>
-                          </Appenders>
-                          <Loggers>
-                              <!-- Default logger -->
-                              <Root level="all">
-                                  <AppenderRef ref="console" level="info"/>
-                                  <AppenderRef ref="logstash" level="trace"/>
-                              </Root>
-                              <AsyncLogger name="si.fri.rso.projekt.order.api.v1.resources.OrderApi" level="trace" additivity="false" includeLocation="true">
-                                <AppenderRef ref="logstash"/>
-                              </AsyncLogger>
-                          </Loggers>
-                      </Configuration>'
+
 app-properties:
   external-services:
     enabled: false
